[gd_scene load_steps=12 format=3 uid="uid://qiv55jlwciey"]

[ext_resource type="Texture2D" uid="uid://iiaewatn4wo" path="res://assets/enemy/rockrab/idle.png" id="1_76sde"]
[ext_resource type="Script" uid="uid://djhxq25x0fxd2" path="res://enemies/rockrab.gd" id="1_cbade"]
[ext_resource type="Texture2D" uid="uid://bt0epmf4mrlnx" path="res://assets/enemy/rockrab/walk.png" id="2_r73ga"]
[ext_resource type="Script" uid="uid://vmn154w5x1u" path="res://Management/states/rockrab/rockrab_idle.gd" id="4_tiibl"]
[ext_resource type="Script" uid="uid://cptl0jxutii7v" path="res://Management/states/rockrab/rockrab_walk.gd" id="5_vh4ja"]
[ext_resource type="PackedScene" uid="uid://dghe1uklhuim0" path="res://Management/composition_scenes/health_component.tscn" id="6_bc0aq"]

[sub_resource type="Animation" id="Animation_cbade"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_76sde")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [19]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_r73ga"]
resource_name = "idle"
length = 1.83334
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_76sde")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [19]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333, 0.666667, 0.916667, 1, 1.08333, 1.16667, 1.25, 1.33333, 1.41667, 1.5, 1.58333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_tiibl"]
resource_name = "walk"
length = 1.08334
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_r73ga")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [15]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333, 0.666667, 0.75, 0.833333, 0.916667, 1, 1.08333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tiibl"]
_data = {
&"RESET": SubResource("Animation_cbade"),
&"idle": SubResource("Animation_r73ga"),
&"walk": SubResource("Animation_tiibl")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_r73ga"]
radius = 18.0278

[node name="rockrab" type="CharacterBody2D" node_paths=PackedStringArray("health_component") groups=["enemy"]]
collision_layer = 2
collision_mask = 45
script = ExtResource("1_cbade")
health_component = NodePath("HealthComponent")
element = "earth"

[node name="texture" type="Sprite2D" parent="."]
position = Vector2(0, -1)
texture = ExtResource("1_76sde")
hframes = 19

[node name="animation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_tiibl")
}

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -18)
shape = SubResource("CircleShape2D_r73ga")

[node name="hsm" type="LimboHSM" parent="."]

[node name="rockrab_idle" type="LimboState" parent="hsm" node_paths=PackedStringArray("parent", "animation")]
script = ExtResource("4_tiibl")
parent = NodePath("../..")
animation = NodePath("../../animation")
idle_min_time = 4.0
idle_max_time = 7.0

[node name="rockrab_walk" type="LimboState" parent="hsm" node_paths=PackedStringArray("parent", "animation")]
script = ExtResource("5_vh4ja")
parent = NodePath("../..")
animation = NodePath("../../animation")
speed = 3500.0

[node name="idle_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="HealthComponent" parent="." instance=ExtResource("6_bc0aq")]
max_health = 20.0
max_poise = 10.0
poise_recover_timer = 6.0

[connection signal="timeout" from="idle_timer" to="hsm/rockrab_idle" method="_on_idle_timer_timeout"]
